try out tiling window manager

--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -13,45 +13,80 @@
 sudo yabai --load-sa
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
-# global settings
-yabai -m config mouse_follows_focus          off
-yabai -m config focus_follows_mouse          off
-yabai -m config window_origin_display        default
-yabai -m config window_placement             second_child
-yabai -m config window_topmost               off
-yabai -m config window_shadow                on
-yabai -m config window_opacity               off
-yabai -m config window_opacity_duration      0.0
-yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.90
-yabai -m config window_border                off
-yabai -m config window_border_width          6
-yabai -m config active_window_border_color   0xff775759
-yabai -m config normal_window_border_color   0xff555555
-yabai -m config insert_feedback_color        0xffd75f5f
-yabai -m config split_ratio                  0.50
-yabai -m config auto_balance                 off
-yabai -m config mouse_modifier               fn
-yabai -m config mouse_action1                move
-yabai -m config mouse_action2                resize
-yabai -m config mouse_drop_action            swap
-
-# general space settings
-yabai -m config layout                       bsp
-yabai -m config top_padding                  04
-yabai -m config bottom_padding               04
-yabai -m config left_padding                 04
-yabai -m config right_padding                04
-yabai -m config window_gap                   06
+yabai -m space 1 --label code
+yabai -m space 2 --label web
+yabai -m space 3 --label mail
+yabai -m space 4 --label notes
+yabai -m space 6 --label social
+yabai -m space 7 --label media
 
 # apps to not manage (ignore)
 # yabai -m query --windows
-yabai -m rule --add app="^System Preferences$" manage=off
-yabai -m rule --add app="^Activity Monitor$" manage=off
-yabai -m rule --add app="^Disk Utility$" manage=off
-yabai -m rule --add app="^Alfred Preferences$" manage=off
-yabai -m rule --add app="^Music$" manage=off
-yabai -m rule --add app="^Rectangle$" manage=off
-yabai -m rule --add app="^EuDic$" manage=off
+
+yabai -m rule --add app="^(Calendar|Activity Monitor|Console|Calculator|System Preferences|Archive Utility|Disk Utility|Digital Color Meter)$" manage=off
+yabai -m rule --add app="^(Alfred Preferences|EuDic)$" manage=off
+yabai -m rule --add app="^(iOA)$" manage=off
+
+
+yabai -m rule --add app="^(Safari|Google Chrome)$" space=web
+yabai -m rule --add app="^Notes$" space=notes
+yabai -m rule --add app="^Telegram$" space=social
+yabai -m rule --add app="^mpv$" manage=off border=off sticky=on layer=above opacity=1.0 grid=8:8:6:0:2:2
+
+yabai -m config                              \
+    mouse_follows_focus         on           \
+    focus_follows_mouse         autoraise    \
+    window_placement            first_child  \
+    window_topmost              off          \
+    window_shadow               off          \
+    window_animation_duration   0.0          \
+    window_opacity_duration     0.0          \
+    active_window_opacity       0.99         \
+    normal_window_opacity       0.60         \
+    window_opacity              on           \
+    insert_feedback_color       0xaad75f5f   \
+    active_window_border_color  0xBF775759   \
+    normal_window_border_color  0x7f353535   \
+    window_border_width         2            \
+    window_border_radius        12           \
+    window_border_blur          on           \
+    window_border_hidpi         on           \
+    window_border               on           \
+    split_ratio                 0.50         \
+    split_type                  auto         \
+    auto_balance                off          \
+    top_padding                 06           \
+    left_padding                06           \
+    right_padding               06           \
+    bottom_padding              06           \
+    window_gap                  06           \
+    layout                      bsp          \
+    mouse_modifier              fn           \
+    mouse_action1               move         \
+    mouse_action2               resize       \
+    mouse_drop_action           swap
+
+# yabai -m config mouse_follows_focus          off
+# yabai -m config focus_follows_mouse          off
+# yabai -m config window_origin_display        default
+# yabai -m config window_placement             second_child
+# yabai -m config window_topmost               off
+# yabai -m config window_shadow                on
+# yabai -m config window_opacity               on
+# yabai -m config window_opacity_duration      0.0
+# yabai -m config active_window_opacity        1.0
+# yabai -m config normal_window_opacity        0.90
+# yabai -m config window_border                off
+# yabai -m config window_border_width          6
+# yabai -m config active_window_border_color   0xff775759
+# yabai -m config normal_window_border_color   0xff555555
+# yabai -m config insert_feedback_color        0xffd75f5f
+# yabai -m config split_ratio                  0.50
+# yabai -m config auto_balance                 off
+# yabai -m config mouse_modifier               fn
+# yabai -m config mouse_action1                move
+# yabai -m config mouse_action2                resize
+# yabai -m config mouse_drop_action            swap
+
 
 echo "yabai configuration loaded.."
