--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -13,6 +13,9 @@
 sudo yabai --load-sa
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
+SPACEBAR_HEIGHT=$(spacebar -m config height)
+yabai -m config external_bar all:0:$SPACEBAR_HEIGHT
+
 yabai -m space 1 --label code
 yabai -m space 2 --label web
 yabai -m space 3 --label mail
