--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -13,8 +13,8 @@
 sudo yabai --load-sa
 yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
-SPACEBAR_HEIGHT=$(spacebar -m config height)
-yabai -m config external_bar all:0:$SPACEBAR_HEIGHT
+#SPACEBAR_HEIGHT=$(spacebar -m config height)
+#yabai -m config external_bar all:0:$SPACEBAR_HEIGHT
 
 yabai -m space 1 --label code
 yabai -m space 2 --label web
@@ -26,7 +26,9 @@ yabai -m space 7 --label media
 # apps to not manage (ignore)
 # yabai -m query --windows
 
-yabai -m rule --add app="^(Calendar|Activity Monitor|Console|Calculator|System Preferences|Archive Utility|Disk Utility|Digital Color Meter)$" manage=off
+yabai -m rule --add app="^(`cat $HOME/.yabai.unmanaged.apps | grep '^' | head -c-1 - | tr '\n' '|'`)$" manage=off
+#yabai -m rule --add app="^(Calendar|Activity Monitor|Console|Calculator|System Preferences|System Information|Archive Utility|Disk Utility|Digital Color Meter|System Information)$" manage=off
+
 yabai -m rule --add app="^(Alfred Preferences|EuDic)$" manage=off
 yabai -m rule --add app="^(iOA)$" manage=off
 
