--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -16,64 +16,70 @@ alt - l : yabai -m window --focus east
 alt - z : yabai -m window --focus stack.prev
 alt - c : yabai -m window --focus stack.next
 
-# swap window
+# swap window (move to target window area and resize)
 shift + alt - x : yabai -m window --swap recent
 shift + alt - h : yabai -m window --swap west
 shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
-
-# move window
+# move window (keep size but re-arrange relative windows)
 shift + cmd - h : yabai -m window --warp west
 shift + cmd - j : yabai -m window --warp south
 shift + cmd - k : yabai -m window --warp north
 shift + cmd - l : yabai -m window --warp east
 
-# balance size of windows
-shift + alt - 0 : yabai -m space --balance
-
-# make floating window fill screen
-shift + alt - up     : yabai -m window --grid 1:1:0:0:1:1
-
+# move floating window
+shift + ctrl - a : yabai -m window --move rel:-100:0
+shift + ctrl - s : yabai -m window --move rel:0:100
+shift + ctrl - w : yabai -m window --move rel:0:-100
+shift + ctrl - d : yabai -m window --move rel:100:0
+# make floating window fill top-half of screen
+shift + alt - up     : yabai -m window --grid 2:1:0:0:1:1
+# make floating window fill bottom-half of screen
+shift + alt - down   : yabai -m window --grid 2:1:0:1:1:1
 # make floating window fill left-half of screen
 shift + alt - left   : yabai -m window --grid 1:2:0:0:1:1
-
 # make floating window fill right-half of screen
 shift + alt - right  : yabai -m window --grid 1:2:1:0:1:1
 
 # destroy desktop
 # cmd + alt - w : yabai -m space --destroy
-cmd + alt - w : yabai -m space --focus prev && yabai -m space recent --destroy
+# cmd + alt - w : yabai -m space --focus prev && yabai -m space recent --destroy
 
 # fast focus desktop
-shift + alt - x : yabai -m space --focus recent
-shift + alt - z : yabai -m space --focus prev || skhd -k "ctrl + alt + cmd - z"
-shift + alt - c : yabai -m space --focus next || skhd -k "ctrl + alt + cmd - c"
-shift + alt - 1 : yabai -m space --focus  1 || skhd -k "ctrl + alt + cmd - 1"
-shift + alt - 2 : yabai -m space --focus  2 || skhd -k "ctrl + alt + cmd - 2"
-shift + alt - 3 : yabai -m space --focus  3 || skhd -k "ctrl + alt + cmd - 3"
-shift + alt - 4 : yabai -m space --focus  4 || skhd -k "ctrl + alt + cmd - 4"
-shift + alt - 5 : yabai -m space --focus  5 || skhd -k "ctrl + alt + cmd - 5"
-shift + alt - 6 : yabai -m space --focus  6 || skhd -k "ctrl + alt + cmd - 6"
-shift + alt - 7 : yabai -m space --focus  7 || skhd -k "ctrl + alt + cmd - 7"
-#shift + alt - 8 : yabai -m space --focus  8 || skhd -k "ctrl + alt + cmd - 8"
-#shift + alt - 9 : yabai -m space --focus  9 || skhd -k "ctrl + alt + cmd - 9"
-#shift + alt - 0 : yabai -m space --focus 10 || skhd -k "ctrl + alt + cmd - 0"
+#shift + alt - x : yabai -m space --focus recent
+# shift + alt - z : yabai -m space --focus prev || skhd -k "ctrl + alt + cmd - z"
+# shift + alt - c : yabai -m space --focus next || skhd -k "ctrl + alt + cmd - c"
+alt - backspace : yabai -m space --focus recent
+alt - left  : yabai -m space --focus prev
+alt - right : yabai -m space --focus next
+alt - 1 : yabai -m space --focus  1
+alt - 2 : yabai -m space --focus  2
+alt - 3 : yabai -m space --focus  3
+alt - 4 : yabai -m space --focus  4
+alt - 5 : yabai -m space --focus  5
+alt - 6 : yabai -m space --focus  misc
+alt - 9 : yabai -m space --focus  adhoc
+
+#"Command + m" is traditional shortcut for minimize current window
+#I don't think minimizing a window is needed, instead we can move it to a "hidden" space!
+cmd - m : yabai -m window --space adhoc
+#"shift + alt" prefix is used to move window around spaces,
+#the frequent ordinary operation in adhoc space is move out window,
+#so we can keep 'shift' key to reduce modifier key switch between 'shift + alt' and 'alt'.
+shift + alt - 0 : yabai -m space --focus adhoc
 
 # send window to desktop and follow focus
-shift + cmd - x : yabai -m window --space recent && yabai -m space --focus recent
-shift + cmd - z : yabai -m window --space prev && yabai -m space --focus prev
-shift + cmd - c : yabai -m window --space next && yabai -m space --focus next
-shift + cmd - 1 : yabai -m window --space  1 && yabai -m space --focus 1
-shift + cmd - 2 : yabai -m window --space  2 && yabai -m space --focus 2
-shift + cmd - 3 : yabai -m window --space  3 && yabai -m space --focus 3
-shift + cmd - 4 : yabai -m window --space  4 && yabai -m space --focus 4
-shift + cmd - 5 : yabai -m window --space  5 && yabai -m space --focus 5
-shift + cmd - 6 : yabai -m window --space  6 && yabai -m space --focus 6
-shift + cmd - 7 : yabai -m window --space  7 && yabai -m space --focus 7
-#shift + cmd - 8 : yabai -m window --space  8 && yabai -m space --focus 8
-#shift + cmd - 9 : yabai -m window --space  9 && yabai -m space --focus 9
-#shift + cmd - 0 : yabai -m window --space 10 && yabai -m space --focus 10
+shift + alt - backspace : yabai -m window --space recent && yabai -m space --focus recent
+shift + alt - left : yabai -m window --space prev && yabai -m space --focus prev
+shift + alt - right : yabai -m window --space next && yabai -m space --focus next
+shift + alt - 1 : yabai -m window --space  1 && yabai -m space --focus 1
+shift + alt - 2 : yabai -m window --space  2 && yabai -m space --focus 2
+shift + alt - 3 : yabai -m window --space  3 && yabai -m space --focus 3
+shift + alt - 4 : yabai -m window --space  4 && yabai -m space --focus 4
+shift + alt - 5 : yabai -m window --space  5 && yabai -m space --focus 5
+shift + alt - 6 : yabai -m window --space  misc && yabai -m space --focus misc
+shift + alt - 9 : yabai -m window --space  adhoc && yabai -m space --focus adhoc
 
 # # focus monitor
 # ctrl + alt - x  : yabai -m display --focus recent
@@ -91,12 +97,8 @@ shift + cmd - 7 : yabai -m window --space  7 && yabai -m space --focus 7
 # ctrl + cmd - 2  : yabai -m window --display 2 && yabai -m display --focus 2
 # ctrl + cmd - 3  : yabai -m window --display 3 && yabai -m display --focus 3
 
-# move window
-shift + ctrl - a : yabai -m window --move rel:-100:0
-shift + ctrl - s : yabai -m window --move rel:0:100
-shift + ctrl - w : yabai -m window --move rel:0:-100
-shift + ctrl - d : yabai -m window --move rel:100:0
-
+# balance size of windows
+shift + alt - r : yabai -m space --balance
 #resize window
 shift + alt - w : yabai -m window --resize top:0:-100 --resize bottom:0:100
 shift + alt - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
@@ -135,7 +137,7 @@ alt - x : yabai -m space --mirror x-axis
 alt - a : yabai -m space --toggle padding --toggle gap
 
 # toggle window parent zoom
-alt - d : yabai -m window --toggle zoom-parent
+# alt - d : yabai -m window --toggle zoom-parent
 
 # toggle window fullscreen zoom
 alt - m : yabai -m window --toggle zoom-fullscreen
@@ -147,16 +149,10 @@ shift + alt - m : yabai -m window --toggle native-fullscreen
 alt - e : yabai -m window --toggle split
 
 # float / unfloat window and restore position
-# alt - t : yabai -m window --toggle float && /tmp/yabai-restore/$(yabai -m query --windows --window | jq -re '.id').restore 2>/dev/null || true
 alt - t : yabai -m window --toggle float --grid 8:8:1:1:6:6
 
 # toggle sticky (show on all spaces)
 alt - s : yabai -m window --toggle sticky --toggle topmost --toggle float --grid 8:8:3:0:5:6
-
-#custom
-# alt - s : yabai -m window --toggle sticky;\
-#           yabai -m window --toggle topmost;\
-#           yabai -m window --toggle pip
 
 # toggle topmost (keep above other windows)
 alt - o : yabai -m window --toggle topmost
@@ -164,15 +160,9 @@ alt - o : yabai -m window --toggle topmost
 # toggle picture-in-picture
 alt - p : yabai -m window --toggle border --toggle pip
 
-# change layout of desktop
-ctrl + alt - a : yabai -m space --layout bsp
-ctrl + alt - d : yabai -m space --layout float
-ctrl + alt - s : yabai -m space --layout $(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "float" else "bsp" end')
-
-shift + alt - n :  yabai -m space --focus next || yabai -m space --focus first
-shift + alt - p :  yabai -m space --focus prev || yabai -m space --focus last
+# toggle layout between 'bsp' and 'stack.
+ctrl + cmd - space : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')"
 
 ctrl + alt + shift + cmd - k : update-yabai-unmanaged-apps add
 ctrl + alt + shift + cmd - l : update-yabai-unmanaged-apps delete
-cmd - m : yabai -m window --space adhoc
 
