--- a/files/rime/squirrel.custom.yaml
+++ b/files/rime/squirrel.custom.yaml
@@ -3,21 +3,29 @@ patch:
 
   # 特定App默认中/英文输入   
   app_options:    
+    org.alacritty:
+        ascii_mode: true
+        no_inline: true
+        vim_mode: true #当按下 Esc 的时候会自动将 Rime 切换成英文输入法
+    net.kovidgoyal.kitty:
+        ascii_mode: true
+        no_inline: true
+        vim_mode: true
+    com.apple.Terminal:              # 终端
+        ascii_mode: true
+        no_inline: true
+        vim_mode: true
+    com.microsoft.VSCode:            # Visual Studio Code
+        ascii_mode: true
+        ascii_punct: true            # 中文状态输出英文标点(半角) 
+        vim_mode: true
     com.apple.Spotlight:             # 聚焦搜索
         ascii_mode: true             # true默认英文,false默认中文
     com.runningwithcrayons.Alfred:   # alfred
         ascii_mode: true
-    com.microsoft.VSCode:            # Visual Studio Code
-        ascii_mode: true
-        ascii_punct: true            # 中文状态输出英文标点(半角) 
-    com.apple.Terminal:              # 终端
-        ascii_mode: true
     com.apple.finder:
         ascii_mode: true
-    org.alacritty:
-      ascii_mode: true
-    net.kovidgoyal.kitty:
-      ascii_mode: true
+
 
   # 皮肤主题名称输入在下方，分为浅色和深色
   # 浅色主题（使用哪个主题去掉前面的 #）
