--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -8,31 +8,46 @@
 
 alt - return : open -na /Users/penglei/Applications/Alacritty.app
 
-# focus window
+# toggle layout between 'bsp' and 'stack.
+ctrl + cmd - space : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')"
+
+# focus bsp windows
 alt - h : yabai -m window --focus west
 alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
-alt - z : yabai -m window --focus stack.prev
-alt - c : yabai -m window --focus stack.next
 
-# swap window (move to target window area and resize)
+# cyclic focus stack windows
+ctrl - right : yabai -m query --spaces --space \
+  | jq -re ".index" \
+  | xargs -I{} yabai -m query --windows --space {} \
+  | jq -sre '.[] | map(select(.minimized != 1)) | sort_by(.display, .frame.y, .frame.x, .id) | reverse | nth(index(map(select(."has-focus" == true))) - 1).id' \
+  | xargs -I{} yabai -m window --focus {}
+
+# backward
+ctrl - left: yabai -m query --spaces --space \
+  | jq -re ".index" \
+  | xargs -I{} yabai -m query --windows --space {} \
+  | jq -sre '.[] | map(select(.minimized != 1)) | sort_by(.display, .frame.y, .frame.y, .id) | nth(index(map(select(."has-focus" == true))) - 1).id' \
+  | xargs -I{} yabai -m window --focus {}
+
+# swap bsp window (move to target window area and resize)
 shift + alt - x : yabai -m window --swap recent
 shift + alt - h : yabai -m window --swap west
 shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
-# move window (keep size but re-arrange relative windows)
+# move bsp window (keep size but re-arrange relative windows)
 shift + cmd - h : yabai -m window --warp west
 shift + cmd - j : yabai -m window --warp south
 shift + cmd - k : yabai -m window --warp north
 shift + cmd - l : yabai -m window --warp east
 
 # move floating window
-shift + ctrl - a : yabai -m window --move rel:-100:0
-shift + ctrl - s : yabai -m window --move rel:0:100
-shift + ctrl - w : yabai -m window --move rel:0:-100
-shift + ctrl - d : yabai -m window --move rel:100:0
+ctrl + shift - a : yabai -m window --move rel:-100:0
+ctrl + shift - s : yabai -m window --move rel:0:100
+ctrl + shift - w : yabai -m window --move rel:0:-100
+ctrl + shift - d : yabai -m window --move rel:100:0
 # make floating window fill top-half of screen
 shift + alt - up     : yabai -m window --grid 2:1:0:0:1:1
 # make floating window fill bottom-half of screen
@@ -159,9 +174,6 @@ alt - o : yabai -m window --toggle topmost
 
 # toggle picture-in-picture
 alt - p : yabai -m window --toggle border --toggle pip
-
-# toggle layout between 'bsp' and 'stack.
-ctrl + cmd - space : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')"
 
 ctrl + alt + shift + cmd - k : update-yabai-unmanaged-apps add
 ctrl + alt + shift + cmd - l : update-yabai-unmanaged-apps delete
