--- a/files/dotfiles/.yabairc
+++ b/files/dotfiles/.yabairc
@@ -64,7 +64,7 @@ yabai -m config                              \
     mouse_action2               resize       \
     mouse_drop_action           swap
 
-yabai -m config external_bar all:0:$(spacebar -m config height)
+#yabai -m config external_bar all:0:$(spacebar -m config height)
 
 echo "yabai configuration loaded.."
 
