--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -6,7 +6,7 @@
 #keywords:
 #https://github.com/koekeishiya/skhd/issues/1
 
-alt - return : open -na /Users/penglei/Applications/Alacritty.app
+alt - return : open -na /Users/penglei/Applications/Alacritty.app && skhd -k "alt - t"
 
 # toggle layout between 'bsp' and 'stack.
 ctrl + cmd - space : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')"
