resolve conflict 'ctrl + shift + j': chrome download and move window

--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -39,10 +39,10 @@ shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
 # move bsp window (keep size but re-arrange relative windows)
-shift + cmd - h : yabai -m window --warp west
-shift + cmd - j : yabai -m window --warp south
-shift + cmd - k : yabai -m window --warp north
-shift + cmd - l : yabai -m window --warp east
+shift + cmd - left : yabai -m window --warp west
+shift + cmd - down : yabai -m window --warp south
+shift + cmd - up : yabai -m window --warp north
+shift + cmd - right : yabai -m window --warp east
 
 # move floating window
 ctrl + shift - a : yabai -m window --move rel:-100:0
