update alacritty and rime half_shape

--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -59,25 +59,25 @@ patch:
       "/bq": [😀,😁,😂,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,😗]
       "/ss": [💪,👈,👉,👆,👇,✋,👌,👍,👎,✊,👊,👋,👏,👐]
     half_shape:
-      ',' : [',', ，] #{ commit: ， }
-      '.' : ['.', 。]  #{ commit: 。 }
-      '<' : ['<', 《, 〈, «, ‹ ]
-      '>' : ['>', 》, 〉, », › ]
-      '/' : ['/', 、, ／, ÷ ]
-      '?' : ['?', ？] #{ commit: ？ }
-      ';' : [';', ；] #{ commit: ； }
-      ':' : [':', ：] #{ commit: ： }
+      ',' : [，, ','] #{ commit: ， }
+      '.' : [。,'.']  #{ commit: 。 }
+      '<' : [《, '<', 〈, «, ‹ ]
+      '>' : [》, '>', 〉, », › ]
+      '/' : [、, '/', ／, ÷ ]
+      '?' : [？, '?'] #{ commit: ？ }
+      ';' : [；, ';'] #{ commit: ； }
+      ':' : [：, ':'] #{ commit: ： }
       '''': ['''', '‘', '’'] #{ pair: [ '‘', '’' ] }
       '"' : ['"', '“', '”' ] #{ pair: [ '“', '”' ] }
-      '\' : ['\',  、, ＼]
-      '|' : ['|', ・, ｜, '§', '¦' ]
+      '\' : [、, '\', ＼]
+      '|' : [・, '|', ｜, '§', '¦' ]
       '`' : ['`', ｀]
       '~' : ['~', 〜, ～, 〰 ]
-      '!' : ['!', ！] #{ commit: ！ }
+      '!' : [！, '!'] #{ commit: ！ }
       '@' : ['@', ＠]
       '#' : '#'
       '%' : ['%', ％, '°', '℃' ]
-      '$' : ['$',  ￥, '€', '£', '¥', '¢', '¤' ]
+      '$' : ['$', ￥, '€', '£', '¥', '¢', '¤' ]
       '^' : ['^', '……']  #{ commit: …… }
       '&' : '&'
       '*' : ['*', ＊, ・, ·, ×, ※, ❂ ]
@@ -87,10 +87,10 @@ patch:
       '_' : ['_', ——]
       '+' : '+'
       '=' : '='
-      '[' : [ '[', 「, 【, 〔, ［ ]
-      ']' : [ ']', 」, 】, 〕,  ］ ]
-      '{' : [ '{', 『, 〖, ｛ ]
-      '}' : [ '}', 』, 〗, ｝ ]
+      '[' : [「, '[', 【, 〔, ［]
+      ']' : [」, ']', 】, 〕, ］]
+      '{' : [『, '{', 〖, ｛]
+      '}' : [』, '}', 〗, ｝]
 
   recognizer/patterns/punct: "^/([0-9]0?|[A-Za-z]+)$"
   
