--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -12,7 +12,9 @@ alt - return : skhd -k "ctrl + alt - i" && \
                skhd -k "alt - t"
 
 # toggle layout between 'bsp' and 'stack.
-ctrl + cmd - space : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')"
+#alt + rshift - r :
+alt + shift - r : yabai -m space --layout "$(yabai -m query --spaces --space | jq -r 'if .type == "bsp" then "stack" else "bsp" end')" && \
+                   sketchybar -m --trigger space_mode_change &> /dev/null
 
 # focus bsp windows
 alt - h : yabai -m window --focus west
@@ -35,11 +37,11 @@ ctrl - left: yabai -m query --spaces --space \
   | xargs -I{} yabai -m window --focus {}
 
 # swap bsp window (move to target window area and resize)
-shift + alt - x : yabai -m window --swap recent
-shift + alt - h : yabai -m window --swap west
-shift + alt - j : yabai -m window --swap south
-shift + alt - k : yabai -m window --swap north
-shift + alt - l : yabai -m window --swap east
+alt + shift - x : yabai -m window --swap recent
+alt + shift - h : yabai -m window --swap west
+alt + shift - j : yabai -m window --swap south
+alt + shift - k : yabai -m window --swap north
+alt + shift - l : yabai -m window --swap east
 # move bsp window (keep size but re-arrange relative windows)
 shift + cmd - left : yabai -m window --warp west
 shift + cmd - down : yabai -m window --warp south
@@ -52,13 +54,13 @@ ctrl + shift - s : yabai -m window --move rel:0:100
 ctrl + shift - w : yabai -m window --move rel:0:-100
 ctrl + shift - d : yabai -m window --move rel:100:0
 # make floating window fill top-half of screen
-shift + alt - up     : yabai -m window --grid 2:1:0:0:1:1
+alt + shift - up     : yabai -m window --grid 2:1:0:0:1:1
 # make floating window fill bottom-half of screen
-shift + alt - down   : yabai -m window --grid 2:1:0:1:1:1
+alt + shift - down   : yabai -m window --grid 2:1:0:1:1:1
 # make floating window fill left-half of screen
-shift + alt - left   : yabai -m window --grid 1:2:0:0:1:1
+alt + shift - left   : yabai -m window --grid 1:2:0:0:1:1
 # make floating window fill right-half of screen
-shift + alt - right  : yabai -m window --grid 1:2:1:0:1:1
+alt + shift - right  : yabai -m window --grid 1:2:1:0:1:1
 
 # destroy desktop
 # cmd + alt - w : yabai -m space --destroy
@@ -75,8 +77,8 @@ alt - 1 : yabai -m space --focus  1
 alt - 2 : yabai -m space --focus  2
 alt - 3 : yabai -m space --focus  3
 alt - 4 : yabai -m space --focus  4
-alt - 5 : yabai -m space --focus  5
-alt - 6 : yabai -m space --focus  misc
+alt - 7 : yabai -m space --focus  5
+alt - 8 : yabai -m space --focus  misc
 alt - 9 : yabai -m space --focus  adhoc
 
 #"Command + m" is traditional shortcut for minimize current window
@@ -85,19 +87,19 @@ cmd - m : yabai -m window --space adhoc
 #"shift + alt" prefix is used to move window around spaces,
 #the frequent ordinary operation in adhoc space is move out window,
 #so we can keep 'shift' key to reduce modifier key switch between 'shift + alt' and 'alt'.
-shift + alt - 0 : yabai -m space --focus adhoc
+alt + shift - 0 : yabai -m space --focus adhoc
 
 # send window to desktop and follow focus
-shift + alt - backspace : yabai -m window --space recent && yabai -m space --focus recent
-shift + alt - left : yabai -m window --space prev && yabai -m space --focus prev
-shift + alt - right : yabai -m window --space next && yabai -m space --focus next
-shift + alt - 1 : yabai -m window --space  1 && yabai -m space --focus 1
-shift + alt - 2 : yabai -m window --space  2 && yabai -m space --focus 2
-shift + alt - 3 : yabai -m window --space  3 && yabai -m space --focus 3
-shift + alt - 4 : yabai -m window --space  4 && yabai -m space --focus 4
-shift + alt - 5 : yabai -m window --space  5 && yabai -m space --focus 5
-shift + alt - 6 : yabai -m window --space  misc && yabai -m space --focus misc
-shift + alt - 9 : yabai -m window --space  adhoc && yabai -m space --focus adhoc
+alt + shift - backspace : yabai -m window --space recent && yabai -m space --focus recent
+alt + shift - left : yabai -m window --space prev && yabai -m space --focus prev
+alt + shift - right : yabai -m window --space next && yabai -m space --focus next
+alt + shift - 1 : yabai -m window --space  1 && yabai -m space --focus 1
+alt + shift - 2 : yabai -m window --space  2 && yabai -m space --focus 2
+alt + shift - 3 : yabai -m window --space  3 && yabai -m space --focus 3
+alt + shift - 4 : yabai -m window --space  4 && yabai -m space --focus 4
+alt + shift - 7 : yabai -m window --space  5 && yabai -m space --focus 5
+alt + shift - 8 : yabai -m window --space  misc && yabai -m space --focus misc
+alt + shift - 9 : yabai -m window --space  adhoc && yabai -m space --focus adhoc
 
 # # focus monitor
 # ctrl + alt - x  : yabai -m display --focus recent
@@ -116,12 +118,12 @@ shift + alt - 9 : yabai -m window --space  adhoc && yabai -m space --focus adhoc
 # ctrl + cmd - 3  : yabai -m window --display 3 && yabai -m display --focus 3
 
 # balance size of windows
-shift + alt - r : yabai -m space --balance
+alt + shift - b : yabai -m space --balance
 #resize window
-shift + alt - w : yabai -m window --resize top:0:-100 --resize bottom:0:100
-shift + alt - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
-shift + alt - a : yabai -m window --resize left:-100:0 --resize right:100:0
-shift + alt - d : yabai -m window --resize left:100:0 --resize right:-100:0
+alt + shift - w : yabai -m window --resize top:0:-100 --resize bottom:0:100
+alt + shift - s : yabai -m window --resize top:0:100 --resize bottom:0:-100
+alt + shift - a : yabai -m window --resize left:-100:0 --resize right:100:0
+alt + shift - d : yabai -m window --resize left:100:0 --resize right:-100:0
 
 # # increase window size
 # shift + alt - a : yabai -m window --resize left:-100:0
@@ -136,11 +138,11 @@ shift + alt - d : yabai -m window --resize left:100:0 --resize right:-100:0
 # shift + cmd - d : yabai -m window --resize right:-100:0
 
 # set insertion point in focused container
-ctrl + alt - h : yabai -m window --insert west
-ctrl + alt - j : yabai -m window --insert south
-ctrl + alt - k : yabai -m window --insert north
-ctrl + alt - l : yabai -m window --insert east
-ctrl + alt - i : yabai -m window --insert stack
+alt + ctrl - h : yabai -m window --insert west
+alt + ctrl - j : yabai -m window --insert south
+alt + ctrl - k : yabai -m window --insert north
+alt + ctrl - l : yabai -m window --insert east
+alt + ctrl - i : yabai -m window --insert stack
 
 # rotate tree
 alt - r : yabai -m space --rotate 90
@@ -158,7 +160,7 @@ alt - a : yabai -m space --toggle padding --toggle gap
 # alt - d : yabai -m window --toggle zoom-parent
 
 # toggle window fullscreen zoom
-alt - m : yabai -m window --toggle zoom-fullscreen
+alt - m : yabai -m window --toggle zoom-fullscreen && sketchybar -m --trigger window_resize &> /dev/null
 
 # toggle window native fullscreen
 shift + alt - m : yabai -m window --toggle native-fullscreen
