--- a/stuff/alfred/Alfred.alfredpreferences/preferences/local/791ab6709d72c70747ad40ba144a1bb229e5e097/features/defaultresults/prefs.plist
+++ b/stuff/alfred/Alfred.alfredpreferences/preferences/local/791ab6709d72c70747ad40ba144a1bb229e5e097/features/defaultresults/prefs.plist
@@ -9,6 +9,7 @@
 		<string>/Library/PreferencePanes</string>
 		<string>/System/Library/CoreServices/Applications</string>
 		<string>/System/Library/PreferencePanes</string>
+		<string>~/Applications</string>
 		<string>~/Documents</string>
 		<string>~/Library/CloudStorage/iCloudDrive</string>
 	</array>
