--- a/files/rime/squirrel.custom.yaml
+++ b/files/rime/squirrel.custom.yaml
@@ -4,29 +4,30 @@ patch:
   # 特定App默认中/英文输入   
   app_options:    
     org.alacritty:
-        ascii_mode: true
-        no_inline: true
-        vim_mode: true #当按下 Esc 的时候会自动将 Rime 切换成英文输入法
+        ascii_mode: true      # true默认英文,false默认中文
+        vim_mode: true        # 当按下 Esc 的时候会自动将 Rime 切换成英文输入法
+        #no_inline: true      # 「输入码」是否直接显示在候选框上面，而不是显示在屏幕上
+        #ascii_punct: true    # 中文状态输出英文标点(半角) 
     net.kovidgoyal.kitty:
         ascii_mode: true
-        no_inline: true
         vim_mode: true
-    com.apple.Terminal:              # 终端
+    com.apple.Terminal:
         ascii_mode: true
-        no_inline: true
         vim_mode: true
-    com.microsoft.VSCode:            # Visual Studio Code
+    com.runningwithcrayons.Alfred:
         ascii_mode: true
-        ascii_punct: true            # 中文状态输出英文标点(半角) 
+    com.microsoft.VSCode:
+        ascii_mode: true
         vim_mode: true
-    com.apple.Spotlight:             # 聚焦搜索
-        ascii_mode: true             # true默认英文,false默认中文
-    com.runningwithcrayons.Alfred:   # alfred
+    com.jetbrains.goland:
+        ascii_mode: true
+        vim_mode: true
+    com.apple.Spotlight:
         ascii_mode: true
     com.apple.finder:
         ascii_mode: true
 
-
+ 
   # 皮肤主题名称输入在下方，分为浅色和深色
   # 浅色主题（使用哪个主题去掉前面的 #）
   style/color_scheme: mac_light
