--- a/files/rime/double_pinyin_flypy.custom.yaml
+++ b/files/rime/double_pinyin_flypy.custom.yaml
@@ -78,7 +78,7 @@ patch:
       '#' : '#'
       '%' : ['%', ％, '°', '℃' ]
       '$' : ['$', ￥, '€', '£', '¥', '¢', '¤' ]
-      '^' : ['^', '……']  #{ commit: …… }
+      '^' : ['^', '…', '……']  #{ commit: …… }
       '&' : '&'
       '*' : ['*', ＊, ・, ·, ×, ※, ❂ ]
       '(' : ['(',（]
