--- a/files/dotfiles/.skhdrc
+++ b/files/dotfiles/.skhdrc
@@ -150,8 +150,9 @@ alt - m : yabai -m window --toggle zoom-fullscreen && sketchybar -m --trigger wi
 # toggle window native fullscreen
 alt + shift - m : yabai -m window --toggle native-fullscreen
 
-alt - f : yabai -m config focus_follows_mouse off
-alt + shift - f : yabai -m config focus_follows_mouse autoraise
+alt + shift - f : sh -c 'config="off"; f="$HOME/.yabai.config.focus_follows_mouse"; \
+                  if [ "$(cat $f)" == "off" ]; then config="autoraise"; fi; \
+                  yabai -m config focus_follows_mouse "$config" && printf "$config" > $f'
 
 
 # toggle window split type
